--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Erin Fords Project Description/title>
+  <title>Erin Fords Project Description</title>
 </head>
 
 <body>
